fixed bleeding text

--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,9 @@
 
 .content-x {
   font-family: 'Archivo Narrow', sans-serif;
-  margin: 1% 0;
+  margin: 2% 0;
   letter-spacing: 5px;
   transition: all 0.5s ease-in-out;
-  font-size: 10rem !important;
 }
 .content-x:hover {
   letter-spacing: 10px;
